--- a/frontend-builder/src/app/floor-list/floor/floor.component.html
+++ b/frontend-builder/src/app/floor-list/floor/floor.component.html
@@ -1,20 +1,20 @@
 <mat-card>
-  <mat-card-title>{{building.name}}</mat-card-title>
+  <mat-card-title>{{floor.floorName}}</mat-card-title>
   <mat-card-subtitle>
-    Total area: {{building.area}}
+    Total area: {{floor.area}}
   </mat-card-subtitle>
   <mat-card-subtitle>
-    Total cube: {{building.cube}}
+    Total cube: {{floor.cube}}
   </mat-card-subtitle>
   <mat-card-subtitle>
-    Total light: {{building.light}}
+    Total light: {{floor.light}}
   </mat-card-subtitle>
   <mat-card-subtitle>
-    Total heating: {{building.heating}}
+    Total heating: {{floor.heating}}
   </mat-card-subtitle>
   <mat-card-footer>
     <mat-card-actions>
-      <button mat-button (click)="showFloors()">VIEW FLOORS</button>
+      <button mat-button (click)="showRooms()">VIEW ROOMS</button>
       <button mat-button (click)="goBack()">BACK</button>
     </mat-card-actions>
   </mat-card-footer>
