Display room data

--- a/frontend-builder/src/app/floor-list/floor/floor.component.html
+++ b/frontend-builder/src/app/floor-list/floor/floor.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-  <mat-card-title>{{floor.floorName}}</mat-card-title>
+  <mat-card-title>Floor: {{floor.floorName}}</mat-card-title>
   <mat-card-subtitle>
     Total area: {{floor.area}}
   </mat-card-subtitle>
