--- a/frontend-builder/src/app/app.component.html
+++ b/frontend-builder/src/app/app.component.html
@@ -1,1 +1,8 @@
+<mat-card>
+  <mat-card-subtitle>
+    <button mat-button (click)="goBack()">
+      <mat-icon>home</mat-icon>
+    </button>
+  </mat-card-subtitle>
+</mat-card>
 <router-outlet></router-outlet>
