--- a/frontend-builder/src/app/post-dialog/post-dialog.component.html
+++ b/frontend-builder/src/app/post-dialog/post-dialog.component.html
@@ -1,8 +1,21 @@
 <h1 mat-dialog-title>New {{data.type}}</h1>
 <div mat-dialog-content>
   <mat-form-field>
-    <input matInput [(ngModel)]="data.name" placeholder="{{data.type}} name">
+    <input matInput [(ngModel)]="data.name" placeholder="Give it a name">
   </mat-form-field>
+  <mat-form-field *ngIf="isRoomDialog()">
+    <input matInput [(ngModel)]="data.area" placeholder="Area">
+  </mat-form-field>
+  <mat-form-field *ngIf="isRoomDialog()">
+    <input matInput [(ngModel)]="data.cube" placeholder="Cube">
+  </mat-form-field>
+  <mat-form-field *ngIf="isRoomDialog()">
+    <input matInput [(ngModel)]="data.light" placeholder="Light">
+  </mat-form-field>
+  <mat-form-field *ngIf="isRoomDialog()">
+    <input matInput [(ngModel)]="data.heating" placeholder="Heating">
+  </mat-form-field>
+
 </div>
 <div mat-dialog-actions>
   <button mat-button (click)="onNoClick()">Cancel</button>
