Edit building frontend

--- a/frontend-builder/src/app/post-dialog/post-dialog.component.html
+++ b/frontend-builder/src/app/post-dialog/post-dialog.component.html
@@ -19,5 +19,5 @@
 </div>
 <div mat-dialog-actions>
   <button mat-button (click)="onNoClick()">Cancel</button>
-  <button mat-button [mat-dialog-close]="data" [disabled]="isInvalid()" cdkFocusInitial>Create</button>
+  <button mat-button [mat-dialog-close]="data" [disabled]="isInvalid()" cdkFocusInitial>{{getApprovalText()}}</button>
 </div>
